# remani

./: .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md  index.html  sample_config.toml  test.osu
src/: chart.rs  config.rs  game.rs  judgement.rs  lib.rs  main.rs  model.rs  remani_window.rs  view.rs
src/audio/: Cargo.toml  mod.rs  mp3.rs  ogg.rs  resample.rs  wav.rs
src/audio/src/: lib.rs  mp3.rs  ogg.rs  resample.rs  wav.rs
src/chart/: Cargo.toml  mod.rs  ojn.rs  osu.rs  osu_parser.rs
src/chart/ojn/: mod.rs  ojm.rs
src/chart/src/: lib.rs  osu.rs
src/chart/src/ojn/: mod.rs  ojm.rs
src/config/: Cargo.toml  mod.rs  serde_buffer_size.rs  serde_key_bindings.rs
src/config/src/: lib.rs  serde_key_bindings.rs
src/gameskin/: Cargo.toml  mod.rs  osu_skin.rs
src/gameskin/src/: lib.rs  osu_skin.rs
src/judgement/: Cargo.toml
src/judgement/src/: lib.rs
src/remani/: Cargo.toml
src/remani/src/: main.rs
src/remani/src/window/: mod.rs  options.rs
src/remani/src/window/game/: mod.rs  model.rs  view.rs
src/skin/: mod.rs  osu_parser.rs  osu_skin.rs
src/warn/: Cargo.toml
src/warn/src/: lib.rs
src/window/: main_menu.rs  mod.rs  options.rs  song_select.rs
src/window/game/: mod.rs  model.rs  view.rs
test/: test_skin
test/fairytale/: Cillia - Fairytale, (shuniki) [Easy].osu  Cillia - Fairytale, (shuniki) [Promise].osu
test/test_chart/: test.osu
test_skin/: skin.ini  skin.ini.bkup  skin.ini.help
