cargo-features = ["default-run"]
[package]
name = "remani"
version = "0.1.0"
authors = ["Matthew Tran <0e4ef622@gmail.com>"]
edition = '2018'
description = "A modular 7k VSRG that aims to support multiple skin and chart formats"
repository = "https://github.com/0e4ef622/remani"
license = "MIT"
keywords = ["7k", "vsrg", "o2jam", "osumania"]
categories = ["games"]
exclude = ["test/*"]
default-run = "remani"

[dependencies]
piston = "0.42"
piston-texture = "0.6"
pistoncore-glutin_window = "0.54"
piston2d-graphics = "0.30"
piston2d-opengl_graphics = "0.59"
image = "0.21"
cpal = "0.8"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
directories = "1.0"
either = "1.5"
nom = "4.2"
conrod_core = "0.63.0"
conrod_piston = "0.63.0"

simplemad = { optional = true, version = "0.9" }
hound = { optional = true, version = "3.4" }
lewton = { optional = true, version = "0.9" }

[patch.crates-io]
cpal = { git = "https://github.com/0e4ef622/cpal", rev = "buffer-size-request" }

[features]
default = ["mp3", "wav", "ogg"]
mp3 = ["simplemad"]
wav = ["hound"]
ogg = ["lewton"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
