[package]
name = "remani_audio"
version = "0.1.0"
authors = ["Matthew Tran <0e4ef622@gmail.com>"]
edition = '2018'
description = "A modular 7k VSRG that aims to support multiple skin and chart formats"
repository = "https://github.com/0e4ef622/remani"
license = "MIT"
workspace = "../.."

[dependencies]
remani_warn = { path = "../warn" }
cpal = "0.8"
simplemad = { optional = true, version = "0.9" }
hound = { optional = true, version = "3.4" }
lewton = { optional = true, version = "0.9" }
either = "1.5"

[features]
default = ["mp3", "wav", "ogg"]
mp3 = ["simplemad"]
wav = ["hound"]
ogg = ["lewton"]
