[package]
name = "remani_chart"
version = "0.1.0"
authors = ["Matthew Tran <0e4ef622@gmail.com>"]
edition = '2018'
description = "A modular 7k VSRG that aims to support multiple skin and chart formats"
repository = "https://github.com/0e4ef622/remani"
license = "MIT"
workspace = "../.."

[dependencies]
remani_audio = { path = "../audio" }
remani_config = { path = "../config" }
remani_warn = { path = "../warn" }
cpal = "0.8"
nom = "4.0"
either = "1.5"
