cargo-features = ["default-run"]
[package]
name = "remani"
version = "0.1.0"
authors = ["Matthew Tran <0e4ef622@gmail.com>"]
edition = '2018'
description = "A modular 7k VSRG that aims to support multiple skin and chart formats"
repository = "https://github.com/0e4ef622/remani"
license = "MIT"
keywords = ["7k", "vsrg", "o2jam", "osumania"]
workspace = "../.."
default-run = "remani"

[dependencies]
remani_audio = { path = "../audio" }
remani_config = { path = "../config" }
remani_chart = { path = "../chart" }
remani_gameskin = { path = "../gameskin" }
remani_warn = { path = "../warn" }
remani_judgement = { path = "../judgement" }
piston = "0.39"
pistoncore-glutin_window = "0.51"
piston2d-graphics = "0.28"
piston2d-opengl_graphics = "0.57"
piston-texture = "0.6"
directories = "1.0"
conrod = { version = "0.62.0", features = ["piston"] }
cpal = "0.8"
